# kickstart

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  kickstart.conf  user-guide.md  user-guide.note
examples/calypso-bbm/src/: main.rs
examples/calypso-trj/src/: main.rs
src/: annealing.rs  calculator.rs  ckick.rs  cli.rs  config.rs  core.rs  crossover.rs  database.rs  event_loop.rs  exploitation.rs  exploration.rs  hardsphere.rs  interactive.rs  kick.rs  kickstart.rs  lib.rs  main.rs  model.rs  mutation.rs  reinsert.rs  search.rs  search2.rs
tests/files/: c6h6.mol2  config.toml
