# [[file:kickstart.note::7f0782c0][7f0782c0]]
[package]
name = "kickstart"
version = "0.0.22"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
serde = {version="1.0", features = ["derive"]}
serde_json = "1.0"
indexmap = "1"
lazy_static = "1.3"
rand = "0.7"
pager = "0.16"
linefeed = "0.6"
clap = {version="3", features = ["derive"]}
toml = "0.5"
signal-hook = "0.1"
crossbeam-channel = "0.3"
#ctrlc = "3"
#-------------------------------------------------
gut = { version="0.2", package="gchemol-gut" }
gosh = { version=">=0.0.29", features=["adhoc"] }
spdkit = { version="0.0.18" }
educate = { path = "../structure-education" }
# 7f0782c0 ends here
