# [[file:kickstart.note::7f0782c0][7f0782c0]]
[package]
name = "kickstart"
version = "0.0.27"
edition = "2021"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "1"
lazy_static = "1.3"
rand = "0.8.5"
pager = "0.16"
linefeed = "0.6"
clap = { version = "4", features = ["derive"] }
toml = "0.5"
signal-hook = "0.1"
crossbeam-channel = "0.3"
#ctrlc = "3"
#-------------------------------------------------
gut = { version = "0.4", package = "gchemol-gut" }
gosh = { version = "0.1", features = ["adhoc"] }
spdkit = { version = "0.1" }
educate = { version = "0.1", path = "../structure-education", features = [
  "adhoc",
] }
surface = { version = ">0.0.30", path = "../surface-explorer", features = [
  "adhoc",
] }
vecfx = { version = "0.1", features = ["nalgebra"] }
minima-hopping = { version = "0.0.34", features = ["adhoc"] }

# for hard sphere
ncollide3d = "0.33.0"
nalgebra = "0.31.4"

[dev-dependencies]

[features]
# for easy hacking
adhoc = []

# compile with debug symbols in release build
[profile.release]
debug = 2
# 7f0782c0 ends here
